# ingestion_engine

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
examples/tables/: esami_categorie.py  users.py
scripts/: test_pipeline.py
src/: main.py
src/batchers/: batcher.py
src/connectors/: api.py  json.py  json_connector.py  mariadb.py
src/database/: base.py  clickhouse.py
src/experiments/: generators.py
src/extractor/: json_placeholder.py
src/ingestion_engine/: __init__.py
src/ingestion_engine/batchers/: batcher.py
src/ingestion_engine/config/: log_config.py
src/ingestion_engine/connectors/: api.py  base.py  mariadb.py
src/ingestion_engine/database/: base.py  clickhouse.py
src/ingestion_engine/models/: mariadb_config.py  users.py
src/ingestion_engine/normalizers/: base.py  normal.py
src/ingestion_engine/process_data/: pipeline.py
src/ingestion_engine/schema/: column.py  table.py
src/ingestion_engine/sql_builder/: query_builder.py
src/log_config/: config.py
src/models/: api_config.py  clickhouse.py  esami_categorie.py  schema.py
src/normalizers/: base.py  normal.py  normalizer.py
src/process_data/: pipeline.py
src/sql_builder/: query_builder.py
src/sql_renderer/: ddl.py
