[project]
name = "ingestion-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-connect>=1.5.0",
    "dotenv>=0.9.9",
    "mariadb>=1.1.14",
    "requests>=2.34.2",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"